[package]
name = "validador_crate_rust"
version = "0.1.1"
edition = "2021"
authors = ["Danilo <danilo@torneseumprogramador.com.br>"]
description = "Aula de como criar uma Crate"
licence = "Free"
repository = "https://github.com/torneseumprogramador/validador-crate-rust"
documentation = "https://github.com/torneseumprogramador/validador-crate-rust/blob/main/README.md"
homepage = "https://github.com/torneseumprogramador/validador-crate-rust"

[dependencies]
